--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pnpm": "9.15.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "2.27.10"
   }
 }
