--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "remix-datadog-express-tracing",
+  "name": "react-router-datadog-express-tracing",
   "license": "MIT",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "private": false,
   "type": "module",
   "author": {
@@ -11,11 +11,11 @@
   },
   "description": "Datadog tracing enricher for Remix Apps",
   "bugs": {
-    "url": "https://github.com/brunojppb/remix-datadog-express-tracing/issues"
+    "url": "https://github.com/brunojppb/react-router-datadog-express-tracing/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brunojppb/remix-datadog-express-tracing.git"
+    "url": "git+https://github.com/brunojppb/react-router-datadog-express-tracing.git"
   },
   "keywords": [
     "Datadog",
@@ -34,12 +34,12 @@
     "README.md"
   ],
   "peerDependencies": {
-    "@remix-run/react": "^2",
+    "react-router": "^7",
     "dd-trace": "^5"
   },
   "volta": {
     "node": "22.12.0",
-    "pnpm": "9.15.0"
+    "pnpm": "10.6.5"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
